# photo-id

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  photo_id.bat  pyproject.toml  sonar-project.properties
.github/workflows/: pr-coverage.yml  python-package.yml
photo-id/: photo-id2.py
photo_id/: get_ebird_api_key.py  get_have_list.py  get_havelist.py  get_size_data.py  get_taxonomy.py  image_window.py  match_window.py  photo_id.py  processQuiz.py  process_quiz.py  process_trip.py
tests/: test_get_ebird_api_key.py  test_get_have_list.py  test_get_size_data.py  test_get_taxonomy.py  test_match_window.py  test_photo_id.py  test_process_quiz.py
tests/Ecuador/: EC_trip_Feb10_11_basis.json  EC_trip_Feb12_13_basis_partA.json  EC_trip_Feb12_13_basis_partC.json  EC_trip_Feb15_16_17_basis_partB.json
tests/Norway/: Day0OsloCommon_Part1.json  Day0OsloCommon_Part2.json  Day1-3Oulu_Part1.json  Day1-3Oulu_Part2.json  Day1-3Oulu_Part3.json  Day1-3Oulu_Part4.json  Day1-3Oulu_Part5.json  Day1-3Oulu_Part6.json  Day1-3Oulu_Part7.json  Day4-6Kuusamo_Part1.json  Day4-6Kuusamo_Part2.json  Day4-6Kuusamo_Part3.json  Day4-6Kuusamo_Part4.json  Day4-6Kuusamo_Part5.json  Day4-6Kuusamo_Part6.json  Day7-9Ivalo - Batsfjord_Part1.json  Day7-9Ivalo - Batsfjord_Part2.json  Day7-9Ivalo - Batsfjord_Part3.json  Day7-9Ivalo - Batsfjord_Part4.json  Day7-9Ivalo - Batsfjord_Part5.json  Day7-9Ivalo - Batsfjord_Total.json  Day9-12batsfjord - Vardo_Part1.json  Day9-12batsfjord - Vardo_Part2.json  Day9-12batsfjord - Vardo_Part3.json  Day9-12batsfjord - Vardo_Part4.json  Day9-12batsfjord - Vardo_Total.json
tests/Thailand/: ChiangMaiTotal10PercentPlusHighlights_Part1.json  ChiangMaiTotal10PercentPlusHighlights_Part2.json  ChiangMaiTotal10PercentPlusHighlights_Part3.json  ChiangMaiTotal10PercentPlusHighlights_Part4.json  ChiangMaiTotal10PercentPlusHighlights_Part5.json  ChiangMaiTotal10PercentPlusHighlights_Part6.json  ChiangMaiTotal10PercentPlusHighlights_Part7.json  ChiangMaiTotal2Percent_Part1.json  (+29 more)
(+50 files in other folders)
